Fix too wide arrows in Firefox

--- a/css/arrow.css
+++ b/css/arrow.css
@@ -3,5 +3,5 @@
   color: var(--bs-primary);
   margin: 0;
   padding: 0;
-  width: min-content;
+  width: auto;
 }
